--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="col-md-12 col-sm-12 text-center" id="mission-box">
             <div class="about-title">
               <h2>About Us</h2>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium </br>voluptatum deleniti atque corrupti quos dolores e</p>
+              <p>We love animals and pets! We set up this platform to connect like-minded individuals and </br>pet owners with services that they can provide to their furry friends to make them happy.</p>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp delay-02s">
               <div class="img">
