--- a/index.html
+++ b/index.html
@@ -37,35 +37,35 @@
           <div class="col-md-12 col-sm-12 text-center" id="mission-box">
             <div class="about-title">
               <h2>About Us</h2>
-              <p>We love animals and pets! We set up this platform to connect like-minded individuals and </br>pet owners with services that they can provide to their furry friends to make them happy.</p>
+              <p class='mission-statement'>We love animals and pets! We set up this platform to connect like-minded individuals and </br>pet owners with services that they can provide to their furry friends to make them happy.</p>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp delay-02s">
               <div class="img">
                 <i class="fa fa-refresh"></i>
               </div>
               <h3 class="abt-hd">Our process</h3>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores</p>
+              <p class='mission-statement'>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores</p>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp delay-04s">
               <div class="img">
                 <i class="fa fa-eye"></i>
               </div>
               <h3 class="abt-hd">Our Vision</h3>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores</p>
+              <p class='mission-statement'>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores</p>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp delay-06s">
               <div class="img">
                 <i class="fa fa-cogs"></i>
               </div>
               <h3 class="abt-hd">Our Approach</h3>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores</p>
+              <p class='mission-statement'>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores</p>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp delay-08s">
               <div class="img">
                 <i class="fa fa-dot-circle-o"></i>
               </div>
               <h3 class="abt-hd">Our Objective</h3>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores</p>
+              <p class='mission-statement'>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores</p>
             </div>
           </div>
         </div>
