--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <img id="logo-image" src="img/logo.png" alt="logo">
         </div>
 
-        <h2 class="subs-title text-center">Make your furry friend happy!</h2>
+        <h2 class="subs-title text-center">Meet your new furry friend!</h2>
         <div class="subcription-info text-center">
           <div id="react-search"></div>
         </div>
@@ -37,35 +37,39 @@
           <div class="col-md-12 col-sm-12 text-center" id="mission-box">
             <div class="about-title">
               <h2>About Us</h2>
-              <p class='mission-statement'>We love animals and pets! We set up this platform to connect like-minded individuals and </br>pet owners with services that they can provide to their furry friends to make them happy.</p>
+              <p class='mission-statement'>We love animals and pets! We strive to provide services that connect like-minded individuals</br>and future pet owners, with pet-shops that satisfy their needs.</p>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp delay-02s">
               <div class="img">
                 <i class="fa fa-refresh"></i>
               </div>
               <h3 class="abt-hd">Our process</h3>
-              <p class='mission-statement'>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores</p>
+              <p class='mission-statement'>Pet-Bay helps you find pets or services that make your friend happy. We locate pet-shops and businesses that suit your pet-related needs, and provide you with their contact info.</p>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp delay-04s">
               <div class="img">
                 <i class="fa fa-eye"></i>
               </div>
               <h3 class="abt-hd">Our Vision</h3>
-              <p class='mission-statement'>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores</p>
+              <p class='mission-statement'>A world with happy pets that have a home and humans who love them.</p>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp delay-06s">
               <div class="img">
                 <i class="fa fa-cogs"></i>
               </div>
               <h3 class="abt-hd">Our Approach</h3>
-              <p class='mission-statement'>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores</p>
+              <p class='mission-statement'>Use the search bar above to search for anything you want, ranging from a specific pet you'd like to own, to accessories for the pet(s) you already own.
+                Our state-of-the-art algorithms operate on advanced machine=learning heuristics to help you find what you want.
+              </p>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp delay-08s">
               <div class="img">
                 <i class="fa fa-dot-circle-o"></i>
               </div>
               <h3 class="abt-hd">Our Objective</h3>
-              <p class='mission-statement'>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores</p>
+              <p class='mission-statement'>We set up this platform to make pet shopping more accessible, through the process of connecting people, with pet-related needs, to businesses that help them.
+                We hope you find all the help you need through our service.
+              </p>
             </div>
           </div>
         </div>
