--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               </div>
               <h3 class="abt-hd">Our Approach</h3>
               <p class='mission-statement'>Use the search bar above to search for anything you want, ranging from a specific pet you'd like to own, to accessories for the pet(s) you already own.
-                Our state-of-the-art algorithms operate on advanced machine=learning heuristics to help you find what you want.
+                Our state-of-the-art, industry-proven algorithms use advanced heuristics to help you find what you want.
               </p>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 wow fadeInUp delay-08s">
